--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "core-js": "2",
+    "@angular/animations": "9.1.1",
+    "@angular/common": "^9.1.1",
+    "@angular/compiler": "^9.1.1",
+    "@angular/core": "^9.1.1",
+    "@angular/forms": "^9.1.1",
+    "@angular/platform-browser": "^9.1.1",
+    "@angular/platform-browser-dynamic": "^9.1.1",
+    "@angular/router": "^9.1.1",
+    "core-js": "^3.6.5",
     "moment": "^2.24.0",
-    "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "rxjs": "^6.5.5",
+    "tslib": "^1.10.0",
+    "zone.js": "^0.10.3"
   },
   "scripts": {
     "ng": "ng",
