--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.1",
-    "@angular/common": "^9.1.1",
-    "@angular/compiler": "^9.1.1",
-    "@angular/core": "^9.1.1",
-    "@angular/forms": "^9.1.1",
-    "@angular/platform-browser": "^9.1.1",
-    "@angular/platform-browser-dynamic": "^9.1.1",
-    "@angular/router": "^9.1.1",
+    "@angular/animations": "^10.1.6",
+    "@angular/common": "^10.1.6",
+    "@angular/compiler": "^10.1.6",
+    "@angular/core": "^10.1.6",
+    "@angular/forms": "^10.1.6",
+    "@angular/platform-browser": "^10.1.6",
+    "@angular/platform-browser-dynamic": "^10.1.6",
+    "@angular/router": "^10.1.6",
     "core-js": "^3.6.5",
-    "moment": "^2.24.0",
-    "rxjs": "^6.5.5",
-    "tslib": "^1.10.0",
-    "zone.js": "^0.10.3"
+    "moment": "^2.29.1",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.3",
+    "zone.js": "^0.11.2"
   },
   "scripts": {
     "ng": "ng",
